# termio

./: Cargo.toml  LICENSE  README.md
examples/: advanced.rs  basic.rs  borders.rs  colors.rs  decorations.rs  emoji.rs  fluent.rs  from_file.rs  macro.rs  multiple_sources.rs  styles.tcss
src/: border.rs  color.rs  decoration.rs  lib.rs  macros.rs  prelude.rs  style.rs  styled_text.rs  termio.rs
